# vegetable-cnn-classification

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  feature_request.yml
.github/workflows/: README.md  ci.yml  codeql.yml
data/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: ARCHITECTURE.md  CI_SECURITY.md  DATASET.md  MLOPS.md  MODEL_CARD.md  NOTEBOOKS.md  PROJECT_CONTEXT.md  README.md
models/: README.md
notebooks/: 00_project_overview.ipynb  01_importing_of_libraries.ipynb  02_loading_of_dataset.ipynb  03_data_analysis_and_visualisations.ipynb  04_model_training_for_23px_by_23px_no_augmentation.ipynb  05_model_training_for_23px_by_23px_with_data_augmentation.ipynb  06_model_training_for_101px_by_101px_no_augmentation.ipynb  07_model_training_for_101px_by_101px_with_data_augmentation.ipynb  08_overall_model_evaluation.ipynb  09_bibliographies.ipynb  README.md  manifest.json
reports/: README.md
reports/figures/: README.md
scripts/: README.md  split_notebook.py
src/: README.md
src/vegetable_vision/: README.md  __init__.py  config.py  data.py  evaluate.py  models.py  notebooks.py  train.py  training.py
tests/: README.md  test_config.py  test_data.py  test_notebooks.py
